@startuml

skinparam linetype ortho
skinparam nodesep 100

class Airport {
  - name: String
  - code: String
}

class Airline {
  - name: String
  - code: String
}

class Flight {
  - flightNumber: String
  - originAirport: Airport
  - destinationAirport: Airport
  - airline: Airline
}

class Passenger {
  - id : Long
  - firstName : String
  - lastName : String
  - email : String
  - phone : String
}

Flight *--> Airport
Flight *--> Airline
Flight o-right- Passenger : has

@enduml
